Added Consent Fetch workflow related code.
