# sample-hip/src/main/java/com/nha/abdm/hip/PatientController.java
@@ -13,7 +13,7 @@ import java.util.List;
 @RequestMapping(path = "/v1")
 public class PatientController {
 
-    private static final String requestId = "263ad640-ffb9-4c7d-b5bc-e099577e7e99";
+    private static final String requestId = "263ad641-ffb9-4c7d-b5bc-e099577e7e99";
 
     @GetMapping({"/patients/{patientId}"})
     public Patient fetchPatientById(@PathVariable("patientId") String abhaAddress) {
@@ -88,12 +88,12 @@ public class PatientController {
         LinkApi linkApi = new LinkApi();
 
         CareContext careContext1 = new CareContext();
-        careContext1.setReferenceNumber("care-context-reference15");
-        careContext1.setDisplay("care-context-display15");
+        careContext1.setReferenceNumber("care-context-reference17");
+        careContext1.setDisplay("care-context-display17");
 
         CareContext careContext2 = new CareContext();
-        careContext2.setReferenceNumber("care-context-reference16");
-        careContext2.setDisplay("care-context-display16");
+        careContext2.setReferenceNumber("care-context-reference18");
+        careContext2.setDisplay("care-context-display18");
 
         List<CareContext> careContexts = new ArrayList<>();
         careContexts.add(careContext1);
