# src/main/java/com/nha/abdm/wrapper/hiu/hrp/consent/requests/callback/Notification.java
@@ -1,6 +1,7 @@
 /* (C) 2024 */
 package com.nha.abdm.wrapper.hiu.hrp.consent.requests.callback;
 
+import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -10,8 +11,8 @@ import lombok.NoArgsConstructor;
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
-public class NotifyHIURequest {
-  private String requestId;
-  private String timestamp;
-  private Notification notification;
+public class Notification {
+  private String consentRequestId;
+  private String status;
+  private List<ConsentArtefact> consentArtefacts;
 }
